--- a/paginas/Futbol.html
+++ b/paginas/Futbol.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/mainF.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Deporte - Futbol</title>
 </head>
 <body>
-    
+    <p>aaa</p>
+    <div class="contFut-text-parrafo">
+        <div class="contFut-balon1">
+            <img src="../assets/imagenes/balon1.png" alt="" width="100%" height="100%" style="border-radius: 50%;">
+        </div>
+        <div class="contFut-parrafo1">
+            <p>El fútbol es un deporte de equipo en el que dos conjuntos de 11 jugadores compiten por anotar el mayor número de goles en un partido:El objetivo es hacer que el balón entre en la portería contraria. El balón solo se puede tocar con las manos o los brazos por el portero en su área de meta. Un partido de fútbol dura 90 minutos, divididos en dos tiempos de 45 minutos. El equipo que más goles anote gana el partido.</p>
+        </div>
+    </div>
 </body>
 </html>
