--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Healthy Balance</title>
 </head>
 <body>
+    <a href="paginas/Futbol.html">Futbol</a>
     <P>A</P>
     <p>B</p>
 </body>
