Intento de Menu

--- a/index.html
+++ b/index.html
@@ -11,8 +11,31 @@
     <title>Healthy Balance</title>
 </head>
 <body>
-    <a href="paginas/Futbol.html">Futbol</a>
-    <P>A</P>
-    <p>B</p>
+    <header id="header" class="row container-fluid">
+        <div class="logo col-lg-1 col-sm-12">
+            <img src="assets/iconos/logo1.png" alt="">
+        </div>
+
+        <div class="titulo col-lg-6 col-sm-12">
+            <h1>Tienda de Libros</h1>
+        </div>
+
+        <div class="logos col-lg-3 col-sm-12">
+            <a href=""><img id="icono1" src="assets/iconos/lupa.png" alt=""></a>
+            <a href=""><img id="icono1" src="assets/iconos/carrito.png" alt=""></a>
+            <a href="" ><img id="icono1" src="assets/iconos/registro.png" alt=""></a>
+        </div>
+
+        <nav class="contbtn col-lg-2 col-sm-12">
+            <a href="" data-bs-toggle="dropdown"><img class="fotoM" src="assets/iconos/menu.png" alt=""></a>
+            <div class="dropdown-menu">
+                <a class="dropdown-item" href="#populares">Populares</a>
+                <a class="dropdown-item" href="#CF">Ciencia Ficcion</a>
+                <a class="dropdown-item" href="#suspenso">Suspenso</a>
+                <a class="dropdown-item" href="#trilogia">Trilogia</a>
+                <a class="dropdown-item" href="#usados">Infantiles Usados</a>
+            </div>
+        </nav>
+    </header>
 </body>
 </html>
