--- a/paginas/Futbol.html
+++ b/paginas/Futbol.html
@@ -1,20 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/mainF.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Deporte - Futbol</title>
 </head>
 <body>
-    <p>aaa</p>
-    <div class="contFut-text-parrafo">
-        <div class="contFut-balon1">
-            <img src="../assets/imagenes/balon1.png" alt="" width="100%" height="100%" style="border-radius: 50%;">
+    <main class="row container-fluid" id="margen">
+        <div class="col-lg-2">
+
         </div>
-        <div class="contFut-parrafo1">
-            <p>El fútbol es un deporte de equipo en el que dos conjuntos de 11 jugadores compiten por anotar el mayor número de goles en un partido:El objetivo es hacer que el balón entre en la portería contraria. El balón solo se puede tocar con las manos o los brazos por el portero en su área de meta. Un partido de fútbol dura 90 minutos, divididos en dos tiempos de 45 minutos. El equipo que más goles anote gana el partido.</p>
+        <div class="contFut-text-parrafo col-lg-8">
+            <div class="contFut-balon1">
+                <img src="../assets/imagenes/balon1.png" alt="" width="90%" height="90%" style="border-radius: 50%;">
+            </div>
+            <div class="contFut-parrafo1">
+                <p>El fútbol es un deporte de equipo en el que dos conjuntos de 11 jugadores compiten por anotar el mayor número de goles en un partido:El objetivo es hacer que el balón entre en la portería contraria. El balón solo se puede tocar con las manos o los brazos por el portero en su área de meta. Un partido de fútbol dura 90 minutos, divididos en dos tiempos de 45 minutos. El equipo que más goles anote gana el partido.</p>
+            </div>
         </div>
-    </div>
+    </main>
+
+    <br>
+    <br>
+
+    <main class="row container-fluid contFut-salud" id="margen">
+    
+    </main>
 </body>
 </html>
