inicio de la salud pagina futbol

--- a/paginas/Futbol.html
+++ b/paginas/Futbol.html
@@ -26,8 +26,18 @@
     <br>
     <br>
 
-    <main class="row container-fluid contFut-salud" id="margen">
-    
+    <main class="row container-fluid contFut-padre-salud" id="margen">
+        <div class="contFut-salud">
+            <div class="contFut-padre-fila1"  id="margen">
+                <div class="contFut-imagen-fila1-salud">
+                    <img src="../assets/imagenes/grasacorporal.png" alt="">
+                </div>
+                <div>
+                    <p>Físicamente
+                        Ayuda a reducir la grasa corporal, fortalecer los músculos, aumentar la resistencia, mejorar la coordinación, oxigenar la sangre y aumentar la capacidad cardiovascular.</p>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 </html>
