--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Healthy Balance</title>
 </head>
 <body>
+    <a href="paginas/Futbol.html">pagina futbol</a>
     <header id="header" class="row container-fluid">
         <div class="logo col-lg-1 col-sm-12">
             <img src="assets/iconos/logo1.png" alt="">
