--- a/paginas/Futbol.html
+++ b/paginas/Futbol.html
@@ -26,19 +26,23 @@
     <br>
     <br>
 
-    <main class="row container-fluid contFut-padre-salud" id="margen">
-        <div class="contFut-salud">
-            <div class="contFut-padre-fila1"  id="margen">
-                <div class="contFut-imagen-fila1-salud">
-                    <img src="../assets/imagenes/grasacorporal.png" alt="">
+    <main>
+        <section class="row col-lg-12 contFut-padre-fila1-salud" id="margen">
+            <div class="contFut-fila1 col-lg-8">
+                <div class="col-lg-4">
+                    <img src="../assets/imagenes/grasacorporal.png" alt="" width="100%" height="100%">
                 </div>
-                <div>
-                    <p>Físicamente
-                        Ayuda a reducir la grasa corporal, fortalecer los músculos, aumentar la resistencia, mejorar la coordinación, oxigenar la sangre y aumentar la capacidad cardiovascular.</p>
+                <div class="contFut-parrafo-fila1 col-lg-8">
+                    
                 </div>
             </div>
-        </div>
+        </section>
+        <section>
+
+        </section>
+        <section>
+
+        </section>
     </main>
-    <p>aa</p>
 </body>
 </html>
