--- a/index.html
+++ b/index.html
@@ -11,32 +11,26 @@
     <title>Healthy Balance</title>
 </head>
 <body>
-    <a href="paginas/Futbol.html">pagina futbol</a>
-    <header id="header" class="row container-fluid">
-        <div class="logo col-lg-1 col-sm-12">
-            <img src="assets/iconos/logo1.png" alt="">
+    <header class="row container-fluid" id="header">
+        <div class="logoP col-lg-7">
+            <img src="assets/iconos/logo.png" alt="">
+            <h1>Healthy Balance</h1>
         </div>
-
-        <div class="titulo col-lg-6 col-sm-12">
-            <h1>Tienda de Libros</h1>
-        </div>
-
-        <div class="logos col-lg-3 col-sm-12">
-            <a href=""><img id="icono1" src="assets/iconos/lupa.png" alt=""></a>
-            <a href=""><img id="icono1" src="assets/iconos/carrito.png" alt=""></a>
-            <a href="" ><img id="icono1" src="assets/iconos/registro.png" alt=""></a>
-        </div>
-
-        <nav class="contbtn col-lg-2 col-sm-12">
-            <a href="" data-bs-toggle="dropdown"><img class="fotoM" src="assets/iconos/menu.png" alt=""></a>
+        <div class="maslogos col-lg-5">
+            <button type="button" class="btn btn-outline-light"><img src="assets/iconos/registro.png" alt=""><p>Regístrate</p></button>
+            <button type="button" class="btn btn-outline-light"><img src="assets/iconos/sesion.png" alt=""><p>Inicia Sesión</p></button>            
+            <a href="" data-bs-toggle="dropdown"><img class="menu" src="assets/iconos/menu.png" alt=""></a>
             <div class="dropdown-menu">
-                <a class="dropdown-item" href="#populares">Populares</a>
-                <a class="dropdown-item" href="#CF">Ciencia Ficcion</a>
-                <a class="dropdown-item" href="#suspenso">Suspenso</a>
-                <a class="dropdown-item" href="#trilogia">Trilogia</a>
-                <a class="dropdown-item" href="#usados">Infantiles Usados</a>
+                <a class="dropdown-item" href="">Inicio</a>
+                <a class="dropdown-item" href="">Nutricion</a>
+                <a class="dropdown-item" href="">Futbol</a>
+                <a class="dropdown-item" href="">Tenis</a>
+                <a class="dropdown-item" href="">Basket</a>
+                <a class="dropdown-item" href="">Voley</a>
+                <a class="dropdown-item" href="">Natacion</a>
+                <a class="dropdown-item" href="">Hockey</a>
             </div>
-        </nav>
+        </div>
     </header>
 </body>
 </html>
