--- a/paginas/Futbol.html
+++ b/paginas/Futbol.html
@@ -79,5 +79,18 @@
             </div>
         </section>
     </main>
+    <br>
+    <br>
+    <div class="row container-fluid contFut-grande-mapa" id="margen">
+        <h1>PUNTOS DE ACTIVIDAD</h1>
+        <div class="linea">
+
+        </div>
+        <br>
+        <div class="container-fluid contfut-mapa">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d52554.26983563373!2d-58.4931104655646!3d-34.58792743050749!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sfutbol!5e0!3m2!1ses-419!2sar!4v1731288736018!5m2!1ses-419!2sar"></iframe>
+        </div>
+    </div>
+    <br>
 </body>
 </html>
