--- a/paginas/Futbol.html
+++ b/paginas/Futbol.html
@@ -9,7 +9,30 @@
     <title>Deporte - Futbol</title>
 </head>
 <body>
-    <main class="row container-fluid" id="margen">
+    <header class="row container-fluid" id="header">
+        <div class="logoP col-lg-7">
+            <img src="../assets/iconos/logo.png" alt="">
+            <h1>Healthy Balance</h1>
+        </div>
+        <div class="maslogos col-lg-5">
+            <button type="button" class="btn btn-outline-light"><img src="../assets/iconos/registro.png" alt=""><p>Regístrate</p></button>
+            <button type="button" class="btn btn-outline-light"><img src="../assets/iconos/sesion.png" alt=""><p>Inicia Sesión</p></button>            
+            <a href="" data-bs-toggle="dropdown"><img class="menu" src="../assets/iconos/menu.png" alt=""></a>
+            <div class="dropdown-menu">
+                <a class="dropdown-item" href="">Inicio</a>
+                <a class="dropdown-item" href="">Nutricion</a>
+                <a class="dropdown-item" href="paginas/Futbol.html">Futbol</a>
+                <a class="dropdown-item" href="">Tenis</a>
+                <a class="dropdown-item" href="">Basket</a>
+                <a class="dropdown-item" href="">Voley</a>
+                <a class="dropdown-item" href="">Natacion</a>
+                <a class="dropdown-item" href="">Hockey</a>
+            </div>
+        </div>
+    </header>
+    <br>
+    <br>
+    <main class="row container-fluid main-tareta-Fut1" id="margen">
         <div class="col-lg-2">
 
         </div>
@@ -92,5 +115,6 @@
         </div>
     </div>
     <br>
+   
 </body>
 </html>
