Ya casi terminado

--- a/paginas/registro.html
+++ b/paginas/registro.html
@@ -36,7 +36,7 @@
             <div class="register">
                 <p>
                     Volver al inicio
-                    <a href="../index.html">Inicio</a>
+                    <a href="#">Inicio</a>
                 </p>
             </div>
         </form>
