--- a/paginas/menu.html
+++ b/paginas/menu.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="css/menu.css">
+    <link rel="stylesheet" href="../css/menu.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
@@ -13,13 +13,13 @@
 <body>
     <header class="row container-fluid" id="header">
         <div class="logoP col-lg-7">
-            <img src="assets/iconos/logo.png" alt="">
+            <img src="../assets/iconos/logo.png" alt="">
             <h1>Healthy Balance</h1>
         </div>
         <div class="maslogos col-lg-5">
-            <button type="button" class="btn btn-outline-light"><img src="assets/iconos/registro.png" alt=""><p>Regístrate</p></button>
-            <button type="button" class="btn btn-outline-light"><img src="assets/iconos/sesion.png" alt=""><p>Inicia Sesión</p></button>            
-            <a href="" data-bs-toggle="dropdown"><img class="menu" src="assets/iconos/menu.png" alt=""></a>
+            <button type="button" class="btn btn-outline-light"><img src="../assets/iconos/registro.png" alt=""><p>Regístrate</p></button>
+            <button type="button" class="btn btn-outline-light"><img src="../assets/iconos/sesion.png" alt=""><p>Inicia Sesión</p></button>            
+            <a href="" data-bs-toggle="dropdown"><img class="menu" src="../assets/iconos/menu.png" alt=""></a>
             <div class="dropdown-menu">
                 <a class="dropdown-item" href="">Inicio</a>
                 <a class="dropdown-item" href="">Nutricion</a>
