Termine la pagina de Registro, ya casi termino la de iniciar sesion

--- a/paginas/IniciarSesion.html
+++ b/paginas/IniciarSesion.html
@@ -11,12 +11,8 @@
 <body>
     <div class="wrapper">
         <form action="#">
-            <img src="../assets/imagenes/inicar-listo.png" >
-            <h2>Registrate</h2>
-            <div class="input-field">
-                <input type="text" required placeholder="Nombre">
-                <label></label>
-            </div>
+            <img src="assets/imagenes/inicar-listo.png" >
+            <h2>Bienvenido</h2>
             <div class="input-field">
                 <input type="text" required placeholder="Gmail">
                 <label></label>
@@ -37,8 +33,14 @@
             <button type="submit">Inicar Sesión</button>
             <div class="register">
                 <p>
-                    Volver al inicio
-                    <a href="IniciarSesion.html">Inicio</a>
+                    ¿No Tienes Cuenta?
+                    <a href="registro.html">Register</a>
+                </p>
+            </div>
+            <div class="register">
+                <p>
+                    <B>Volver Pagina Principal</B>
+                    <a href="../index.html">Principal</a>
                 </p>
             </div>
         </form>
