--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="css/menu.css">
+    <link rel="stylesheet" href="css/main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
@@ -10,7 +10,7 @@
     <meta name="keywords" content="Nutricion, Salud, Deportes, actividades, rutinas, dieta, futbol, volley, basquet, basquetball, tenis, natacion, hockey, cuidados, ejercicio, deportes caba, Healthy Balance, tienda cuidados">
     <title>Healthy Balance</title>
 </head>
-<body>
+<body id="body">
     <header class="row container-fluid" id="header">
         <div class="logoP col-lg-7">
             <img src="assets/iconos/logo.png" alt="">
@@ -33,6 +33,62 @@
         </div>
     </header>
 
-    
+    <br>
+
+    <main class="contPrin-carrousel ">
+
+        <div class="contPrin-carrousel-slide">
+
+            <div class="contPrin-carrousel-slide-fondo" style="background-image: url(assets/imagenes/futbol\ index.png);">
+                <div class="contPrin-carrousel-slide-fondo-info">
+                    <div class="contPrin-carrousel-slide-fondo-info-nombre">Futbol</div>
+                    <div class="contPrin-carrousel-slide-fondo-info-descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit dicta sint, explicabo odio ab, ullam adipisci ex nihil et repudiandae quasi quas earum. Quidem sit fuga vel, suscipit iusto sapiente.</div>
+                    <button type="button" class="btn btn-light">Ver más</button>
+                </div>
+            </div>
+
+            <div class="contPrin-carrousel-slide-fondo" style="background-image: url(assets/imagenes/basquet\ index.png);">
+                <div class="contPrin-carrousel-slide-fondo-info">
+                    <div class="contPrin-carrousel-slide-fondo-info-nombre">Basquet</div>
+                    <div class="contPrin-carrousel-slide-fondo-info-descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit dicta sint, explicabo odio ab, ullam adipisci ex nihil et repudiandae quasi quas earum. Quidem sit fuga vel, suscipit iusto sapiente.</div>
+                    <button type="button" class="btn btn-light">Ver más</button>
+                </div>
+            </div>
+
+            <div class="contPrin-carrousel-slide-fondo" style="background-image: url(assets/imagenes/hockey\ index.png);">
+                <div class="contPrin-carrousel-slide-fondo-info">
+                    <div class="contPrin-carrousel-slide-fondo-info-nombre">Hockey</div>
+                    <div class="contPrin-carrousel-slide-fondo-info-descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit dicta sint, explicabo odio ab, ullam adipisci ex nihil et repudiandae quasi quas earum. Quidem sit fuga vel, suscipit iusto sapiente.</div>
+                    <button type="button" class="btn btn-light">Ver más</button>
+                </div>
+            </div>
+
+            <div class="contPrin-carrousel-slide-fondo" style="background-image: url(assets/imagenes/natacion\ index.png);">
+                <div class="contPrin-carrousel-slide-fondo-info">
+                    <div class="contPrin-carrousel-slide-fondo-info-nombre">Natacion</div>
+                    <div class="contPrin-carrousel-slide-fondo-info-descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit dicta sint, explicabo odio ab, ullam adipisci ex nihil et repudiandae quasi quas earum. Quidem sit fuga vel, suscipit iusto sapiente.</div>
+                    <button type="button" class="btn btn-light">Ver más</button>
+                </div>
+            </div>
+
+            <div class="contPrin-carrousel-slide-fondo" style="background-image: url(assets/imagenes/tennis\ index.png);">
+                <div class="contPrin-carrousel-slide-fondo-info">
+                    <div class="contPrin-carrousel-slide-fondo-info-nombre">Tennis</div>
+                    <div class="contPrin-carrousel-slide-fondo-info-descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit dicta sint, explicabo odio ab, ullam adipisci ex nihil et repudiandae quasi quas earum. Quidem sit fuga vel, suscipit iusto sapiente.</div>
+                    <button type="button" class="btn btn-light">Ver más</button>
+                </div>
+            </div>
+
+            <div class="contPrin-carrousel-slide-fondo" style="background-image: url(assets/imagenes/volley\ index.png);">
+                <div class="contPrin-carrousel-slide-fondo-info">
+                    <div class="contPrin-carrousel-slide-fondo-info-nombre">Volley</div>
+                    <div class="contPrin-carrousel-slide-fondo-info-descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit dicta sint, explicabo odio ab, ullam adipisci ex nihil et repudiandae quasi quas earum. Quidem sit fuga vel, suscipit iusto sapiente.</div>
+                    <button type="button" class="btn btn-light">Ver más</button>
+                </div>
+            </div>
+
+        </div>
+
+    </main>
 </body>
 </html>
