modifique la pag de voley

--- a/paginas/Volley.html
+++ b/paginas/Volley.html
@@ -1,12 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="../css/mainV.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <title>Healthy Balance</title>
 </head>
 <body>
-    
+    <h1>VOLEY</h1>
+    <div class="P1">
+        <p>El voleibol, balonvolea o simplemente voley, es un deporte donde dos equipos se enfrentan sobre un terreno de juego liso separados 
+            por una red central, tratando de pasar el balón por encima de la red hacia el suelo del campo contrario.</p>
+    </div>
+    <h1>Como mejorar en el voley</h1>
+    <div class="contvol">
+        <div>
+            <img src="../assets/imagenes/voley1.png" width="100%" height="100%" class="img1">
+                <h2 class="tecnicas"> Practicar las técnicas básicas:</h2>
+                <p>Debemos aprender a colocar nuestro cuerpo, con los pies separados a la altura de los hombros, descargando el 
+                    peso en las piernas. Es importante aprender a arrastrar los pies de manera lateral.</p>
+        </div>
+    </div>
+    <div class="contvol-2"> 
+        <div>
+            <img src="../assets/imagenes/voley2.png"  width="100%" height="100%" class="img2">
+            <h1 class="forma">Ponernos en forma</h1>
+            <p>Es muy importante que mejoremos nuestra forma física en general, para tener un mejor aguante, 
+                resistencia de fondo y mayor potencia.</p>
+        </div>
+    </div>
+    <div class="contvol-3"> 
+        <div>
+            <img src="../assets/imagenes/voley3.png"  width="100%" height="100%" class="img3">
+            <h1 class="lesiones">Prevenir las lesiones:</h1>
+            <p>No podemos hacer mayor hincapié: antes de empezar a jugar, habitúate a calentar el cuerpo. Éste se va poniendo a tono y temperatura para realizar los ejercicios de desplazamientos, saltos y caídas…
+                Imagina el esfuerzo físico al que expones el cuerpo. Al finalizar debes estirar el cuerpo para relajar los músculos piernas y brazos.
+                Siempre, sin atajos. Porque como decíamos al principio: únicamente manteniendo hábitos constantes daremos con buenos resultados.</p>
+        </div>
+    </div>
+    <h1>Los equipos mas importantes del voley</h1>
+    <div class="equipoCH">
+        <img src="../assets/imagenes/equipochina.png" width="100px" height="100px">
+        <p>La selección femenina de voleibol de China es el equipo de voleibol que representa a la República Popular de China 
+            en las competiciones de selecciones nacionales femeninas. Es una de las potencias mundiales en la disciplina.</p>
+    </div>
+    <div class="equipoEU">
+        <img src="../assets/imagenes/equipoeeuu.png" alt="">
+        <p></p>
+    </div>
+    <div class="equipoBR">
+        <img src="../assets/imagenes/equipobrasil.png" width="100px" height="100px">
+        <p></p>
+    </div>
 </body>
 </html>
