--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="contPrin-carrousel-slide-fondo-info">
                     <div class="contPrin-carrousel-slide-fondo-info-nombre">Futbol</div>
                     <div class="contPrin-carrousel-slide-fondo-info-descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit dicta sint, explicabo odio ab, ullam adipisci ex nihil et repudiandae quasi quas earum. Quidem sit fuga vel, suscipit iusto sapiente.</div>
-                    <button type="button" class="btn btn-light">Ver más</button>
+                    <button>Ver más</button>
                 </div>
             </div>
 
@@ -51,7 +51,7 @@
                 <div class="contPrin-carrousel-slide-fondo-info">
                     <div class="contPrin-carrousel-slide-fondo-info-nombre">Basquet</div>
                     <div class="contPrin-carrousel-slide-fondo-info-descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit dicta sint, explicabo odio ab, ullam adipisci ex nihil et repudiandae quasi quas earum. Quidem sit fuga vel, suscipit iusto sapiente.</div>
-                    <button type="button" class="btn btn-light">Ver más</button>
+                    <button>Ver más</button>
                 </div>
             </div>
 
@@ -59,7 +59,7 @@
                 <div class="contPrin-carrousel-slide-fondo-info">
                     <div class="contPrin-carrousel-slide-fondo-info-nombre">Hockey</div>
                     <div class="contPrin-carrousel-slide-fondo-info-descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit dicta sint, explicabo odio ab, ullam adipisci ex nihil et repudiandae quasi quas earum. Quidem sit fuga vel, suscipit iusto sapiente.</div>
-                    <button type="button" class="btn btn-light">Ver más</button>
+                    <button>Ver más</button>
                 </div>
             </div>
 
@@ -67,7 +67,7 @@
                 <div class="contPrin-carrousel-slide-fondo-info">
                     <div class="contPrin-carrousel-slide-fondo-info-nombre">Natacion</div>
                     <div class="contPrin-carrousel-slide-fondo-info-descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit dicta sint, explicabo odio ab, ullam adipisci ex nihil et repudiandae quasi quas earum. Quidem sit fuga vel, suscipit iusto sapiente.</div>
-                    <button type="button" class="btn btn-light">Ver más</button>
+                    <button>Ver más</button>
                 </div>
             </div>
 
@@ -75,7 +75,7 @@
                 <div class="contPrin-carrousel-slide-fondo-info">
                     <div class="contPrin-carrousel-slide-fondo-info-nombre">Tennis</div>
                     <div class="contPrin-carrousel-slide-fondo-info-descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit dicta sint, explicabo odio ab, ullam adipisci ex nihil et repudiandae quasi quas earum. Quidem sit fuga vel, suscipit iusto sapiente.</div>
-                    <button type="button" class="btn btn-light">Ver más</button>
+                    <button>Ver más</button>
                 </div>
             </div>
 
@@ -83,10 +83,16 @@
                 <div class="contPrin-carrousel-slide-fondo-info">
                     <div class="contPrin-carrousel-slide-fondo-info-nombre">Volley</div>
                     <div class="contPrin-carrousel-slide-fondo-info-descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit dicta sint, explicabo odio ab, ullam adipisci ex nihil et repudiandae quasi quas earum. Quidem sit fuga vel, suscipit iusto sapiente.</div>
-                    <button type="button" class="btn btn-light">Ver más</button>
+                    <button>Ver más</button>
                 </div>
             </div>
 
+        </div>
+
+        <div class="contPrin-carrousel-boton">
+            <button class="contPrin-carrousel-boton-anterior"></button>
+            <button class="contPrin-carrousel-boton-siguiente"></button>
+            <!--10:18-->
         </div>
 
     </main>
