--- a/paginas/Natacion.html
+++ b/paginas/Natacion.html
@@ -38,6 +38,33 @@
             <h2>¿Qué es la Natacion?</h2>
             <p> La natación en los Juegos Olímpicos es un deporte tanto individual como colectivo en el que los nadadores impulsan su cuerpo a través del agua mediante el uso de las extremidades corporales y por lo general sin utilizar ningún instrumento o apoyo para avanzar. Esto lo hacen en una piscina al aire libre o cubierta utilizando uno de los siguientes estilos: estilo libre, espalda, braza o mariposa.</p>
         </div>
+    
+
+        <!-- Cards de Gotas -->
+
+        <div class="container">
+            <div class="drop" style="--clr: #ff0f5b">
+                <div class="content">
+                    <h2>01</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, commodi.</p>
+                    <a href="#">Read More</a>
+                </div>
+            </div>
+            <div class="drop" style="--clr: #be01fe">
+                <div class="content">
+                    <h2>02</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, commodi.</p>
+                    <a href="#">Read More</a>
+                </div>
+            </div>
+            <div class="drop" style="--clr: #01b4ff">
+                <div class="content">
+                    <h2>03</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, commodi.</p>
+                    <a href="#">Read More</a>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
