--- a/paginas/Futbol.html
+++ b/paginas/Futbol.html
@@ -32,76 +32,37 @@
     </header>
     <br>
     <br>
-    <main class="row container-fluid main-tareta-Fut1" id="margen">
-        <div class="col-lg-2">
-
-        </div>
-        <div class="contFut-text-parrafo col-lg-8">
-            <div class="contFut-balon1">
-                <img src="../assets/imagenes/balon1.png" alt="" width="100%" height="100%" style="border-radius: 60%;">
+    <div class="container-fluid padre" id="margen">
+        <div class="col-lg-7 cuadrado-fondo" >
+            <div class="container-fluid contenedor-tarjeta">
+                <div class="contenedor-imagen col-lg-4">
+                    <img src="../assets/imagenes/balon1.png" alt="" height="100%" width="100%" style="border-radius: 80%;">
+                </div>
+                <div class="contenedor-parrafo">
+                    <p>El fútbol es un deporte de equipo en el que dos conjuntos de 11 jugadores compiten por anotar el mayor número de goles en un partido:El objetivo es hacer que el balón entre en la portería contraria. El balón solo se puede tocar con las manos o los brazos por el portero en su área de meta. Un partido de fútbol dura 90 minutos, divididos en dos tiempos de 45 minutos. El equipo que más goles anote gana el partido.</p>
+                </div>
             </div>
-            <div class="contFut-parrafo1">
-                <p>El fútbol es un deporte de equipo en el que dos conjuntos de 11 jugadores compiten por anotar el mayor número de goles en un partido:El objetivo es hacer que el balón entre en la portería contraria. El balón solo se puede tocar con las manos o los brazos por el portero en su área de meta. Un partido de fútbol dura 90 minutos, divididos en dos tiempos de 45 minutos. El equipo que más goles anote gana el partido.</p>
-            </div>
         </div>
-    </main>
-
+    </div>
     <br>
     <br>
+    <div class="contenedor-tarjetas">
+        <div class="col-lg-3 col-sm-12 tarjeta">
+            <div class="contenedor-imagen">
+                <img src="../assets/imagenes/grasacorporal.png" alt="" width="50%">
+            </div>
+        </div>
+        <div class="col-lg-3 col-sm-12 tarjeta">
+            <div class="contenedor-imagen">
 
-    <main class="row conFut-tarjetas-salud" id="margen">
-        <section class="col-lg-3 tarjeta1">
-            <div class="contFut-imagen-tarjeta-salud col-lg-12">
-                <img src="../assets/imagenes/grasacorporal.png" alt="" height="200px">
             </div>
-            <div class="conFut-text-tarjeta-salud">
-                <div class="contFut-lista-tarjeta-salud">
-                    <ul>
-                        <li>Reduce la grasa corporal</li>
-                        <li>Mejora el tono muscular</li>
-                    </ul>
-                </div>
-                <div class="contFut-parrafo-tarjeta-salud">
-                    <p>Al jugar al fútbol, ​​utilizas casi todos los grupos musculares principales y también ejercitas la parte inferior del cuerpo, incluidos los cuádriceps, las pantorrillas, los isquiotibiales y los glúteos, desarrollas tus grupos musculares grandes de manera efectiva, porque tener más masa muscular estimula el metabolismo .</p>
-                </div>
+        </div>
+        <div class="col-lg-3 col-sm-12 tarjeta">
+            <div class="contenedor-imagen">
+                
             </div>
-        </section>
-
-        <section class="col-lg-3 tarjeta2">
-            <div class="contFut-imagen-tarjeta-salud col-lg-12">
-                <img src="../assets/imagenes/saludmental.png" alt="" height="200px">
-            </div>
-            <div class="conFut-text-tarjeta-salud">
-                <div class="contFut-lista-tarjeta-salud">
-                    <ul>
-                        <li>Reducción del Estrés</li>
-                        <li>Mejora del Estado de Ánimo</li>
-                    </ul>
-                </div>
-                <div class="contFut-parrafo-tarjeta-salud">
-                    <p>El fútbol, al igual que otros deportes, ayuda a liberar endorfinas, las hormonas responsables de generar sensaciones de bienestar. Esto puede reducir el estrés y la ansiedad. El fútbol es un deporte muy social. Jugar en equipo promueve la colaboración, la comunicación y el apoyo mutuo, lo cual puede fortalecer las relaciones interpersonales.</p>
-                </div>
-            </div>
-        </section>
-
-        <section class="col-lg-3 tarjeta3">
-            <div class="contFut-imagen-tarjeta-salud col-lg-12">
-                <img src="../assets/imagenes/cardiovascular.png" alt="" height="200px">
-            </div>
-            <div class="conFut-text-tarjeta-salud">
-                <div class="contFut-lista-tarjeta-salud">
-                    <ul>
-                        <li>Mejora de la Capacidad Cardiorrespiratoria</li>
-                        <li>Reducción del Riesgo de Enfermedades Cardiovasculares</li>
-                    </ul>
-                </div>
-                <div class="contFut-parrafo-tarjeta-salud">
-                    <p>
-                        El fútbol es un deporte altamente beneficioso para la salud cardiovascular, ya que combina ejercicios aeróbicos con momentos de alta intensidad, lo que tiene un impacto directo en el fortalecimiento del corazón y los vasos sanguíneos.</p>
-                </div>
-            </div>
-        </section>
-    </main>
+        </div>
+    </div>
     <br>
     <br>
     <div class="row container-fluid contFut-grande-mapa" id="margen">
