--- a/paginas/Futbol.html
+++ b/paginas/Futbol.html
@@ -31,7 +31,6 @@
         </div>
     </header>
     <br>
-    <br>
     <div class="container-fluid padre" id="margen">
         <div class="col-lg-7 cuadrado-fondo" >
             <div class="container-fluid contenedor-tarjeta">
@@ -44,22 +43,38 @@
             </div>
         </div>
     </div>
-    <br>
-    <br>
     <div class="contenedor-tarjetas">
         <div class="col-lg-3 col-sm-10 tarjeta">
-            <div class="contenedor-imagen">
-                <img src="../assets/imagenes/grasacorporal.png" alt="" width="50%">
+            <div class="contenedor-imagen ">
+                <img src="../assets/imagenes/grasacorporal.png" alt="" width="100%" height="100%" style=" border-top-left-radius: 15px; border-top-right-radius: 15px;">
+            </div>
+            <div class="titulo">
+                <h2>Perdida de Grasa</h2>
+            </div>
+            <div class="parrafo-tarjeta">
+                <p>El fútbol implica correr, cambiar de dirección, saltar y realizar movimientos rápidos y explosivos. Estos ejercicios de alta intensidad hacen que el cuerpo queme muchas calorías durante el entrenamiento y el partido, lo que facilita la pérdida de grasa. El gasto calórico durante una sesión de fútbol puede ser de 500 a 800 calorías por hora, dependiendo de la intensidad y la duración del ejercicio.</p>
             </div>
         </div>
         <div class="col-lg-3 col-sm-10 tarjeta">
-            <div class="contenedor-imagen">
-
+            <div class="contenedor-imagen ">
+                <img src="../assets/imagenes/saludmental.png" alt="" width="100%" height="100%" style=" border-top-left-radius: 15px; border-top-right-radius: 15px;">
+            </div>
+            <div class="titulo">
+                <h2>Reducción del estrés</h2>
+            </div>
+            <div class="parrafo-tarjeta">
+                <p>El fútbol también tiene beneficios emocionales y psicológicos. La liberación de endorfinas tras una sesión intensa de fútbol ayuda a reducir los niveles de estrés y ansiedad. Menos estrés significa menos cortisol, una hormona que, en exceso, puede favorecer el almacenamiento de grasa, especialmente en la zona abdominal.</p>
             </div>
         </div>
         <div class="col-lg-3 col-sm-10 tarjeta">
-            <div class="contenedor-imagen">
-                
+            <div class="contenedor-imagen ">
+                <img src="../assets/imagenes/cardiovascular.png" alt="" width="100%" height="100%" style=" border-top-left-radius: 15px; border-top-right-radius: 15px;">
+            </div>
+            <div class="titulo">
+                <h2>Beneficios cardiovasculares</h2>
+            </div>
+            <div class="parrafo-tarjeta">
+                <p>El fútbol es un excelente ejercicio aeróbico, lo que mejora la salud cardiovascular y la circulación sanguínea. Un corazón más saludable mejora la eficiencia del sistema de transporte de oxígeno en el cuerpo, lo que se traduce en una mayor capacidad para realizar ejercicio y, por ende, una mejor quema de grasa.</p>
             </div>
         </div>
     </div>
