puse el mapa de las canchas

--- a/paginas/Volley.html
+++ b/paginas/Volley.html
@@ -3,10 +3,11 @@
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
+    <link rel="stylesheet" href="../index.html">
     <link rel="stylesheet" href="../css/mainV.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 
     <title>Healthy Balance</title>
 </head>
@@ -17,6 +18,7 @@
             por una red central, tratando de pasar el balón por encima de la red hacia el suelo del campo contrario.</p>
     </div>
     <h1>Como mejorar en el voley</h1>
+    </div>
     <div class="contvol">
         <div>
             <img src="../assets/imagenes/voley1.png" width="100%" height="100%" class="img1">
@@ -42,19 +44,31 @@
                 Siempre, sin atajos. Porque como decíamos al principio: únicamente manteniendo hábitos constantes daremos con buenos resultados.</p>
         </div>
     </div>
-    <h1>Los equipos mas importantes del voley</h1>
-    <div class="equipoCH">
-        <img src="../assets/imagenes/equipochina.png" width="100px" height="100px">
-        <p>La selección femenina de voleibol de China es el equipo de voleibol que representa a la República Popular de China 
-            en las competiciones de selecciones nacionales femeninas. Es una de las potencias mundiales en la disciplina.</p>
+    <h1>Los 3 jugadores mas importantes del voley</h1>
+    <div class="row col-lg-10 contevol-4"> 
+        <div class="card" style="width: 18rem;">
+            <img src="../assets/imagenes/gibaBR.jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+        </div>
+        <br>
+        <div class="card" style="width: 18rem;">
+            <img src="../assets/imagenes/karchEEUU.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+        </div>
+        <br>
+        <div class="card" style="width: 18rem;">
+            <img src="../assets/imagenes/RegoBR2.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+        </div>
     </div>
-    <div class="equipoEU">
-        <img src="../assets/imagenes/equipoeeuu.png" alt="">
-        <p></p>
-    </div>
-    <div class="equipoBR">
-        <img src="../assets/imagenes/equipobrasil.png" width="100px" height="100px">
-        <p></p>
+    <div class="mapa">
+        <iframe src="https://www.google.com/maps/place/Cancha+de+Voley+La+Copita/@-34.5572323,-58.5130039,15z/data=!4m10!1m2!2m1!1scancha+de+voley!3m6!1s0x95bcb7482018425d:0xa3f8a7183b12afff!8m2!3d-34.5572315!4d-58.4939493!15sCg9jYW5jaGEgZGUgdm9sZXlaESIPY2FuY2hhIGRlIHZvbGV5kgEEcGFya5oBJENoZERTVWhOTUc5blMwVkpRMEZuU1VSNGIzUkRkVFZSUlJBQuABAA!16s%2Fg%2F11sfpmfpx0?entry=ttu&g_ep=EgoyMDI0MTExMy4xIKXMDSoASAFQAw%3D%3D"></iframe>
     </div>
 </body>
 </html>
