--- a/paginas/Futbol.html
+++ b/paginas/Futbol.html
@@ -22,7 +22,7 @@
                 <a class="dropdown-item" href="">Inicio</a>
                 <a class="dropdown-item" href="">Nutricion</a>
                 <a class="dropdown-item" href="paginas/Futbol.html">Futbol</a>
-                <a class="dropdown-item" href="">Tenis</a>
+                <a class="dropdown-item" href="../paginas/Tenis.html">Tenis</a>
                 <a class="dropdown-item" href="">Basket</a>
                 <a class="dropdown-item" href="">Voley</a>
                 <a class="dropdown-item" href="">Natacion</a>
@@ -30,7 +30,6 @@
             </div>
         </div>
     </header>
-    <br>
     <div class="container-fluid padre" id="margen">
         <div class="col-lg-7 cuadrado-fondo" >
             <div class="container-fluid contenedor-tarjeta">
@@ -43,6 +42,7 @@
             </div>
         </div>
     </div>
+
     <div class="contenedor-tarjetas">
         <div class="col-lg-3 col-sm-10 tarjeta">
             <div class="contenedor-imagen ">
