cambie los colores de la pag de voley y modifique otras cosas

--- a/paginas/Volley.html
+++ b/paginas/Volley.html
@@ -8,67 +8,82 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-
     <title>Healthy Balance</title>
 </head>
 <body>
-    <h1>VOLEY</h1>
-    <div class="P1">
-        <p>El voleibol, balonvolea o simplemente voley, es un deporte donde dos equipos se enfrentan sobre un terreno de juego liso separados 
-            por una red central, tratando de pasar el balón por encima de la red hacia el suelo del campo contrario.</p>
-    </div>
-    <h1>Como mejorar en el voley</h1>
-    </div>
-    <div class="contvol">
-        <div>
-            <img src="../assets/imagenes/voley1.png" width="100%" height="100%" class="img1">
-                <h2 class="tecnicas"> Practicar las técnicas básicas:</h2>
-                <p>Debemos aprender a colocar nuestro cuerpo, con los pies separados a la altura de los hombros, descargando el 
-                    peso en las piernas. Es importante aprender a arrastrar los pies de manera lateral.</p>
+    <header class="row container-fluid" id="header">
+        <div class="logoP col-lg-7">
+            <img src="../assets/iconos/logo.png" alt="">
+            <h1>Healthy Balance</h1>
         </div>
-    </div>
-    <div class="contvol-2"> 
-        <div>
-            <img src="../assets/imagenes/voley2.png"  width="100%" height="100%" class="img2">
-            <h1 class="forma">Ponernos en forma</h1>
-            <p>Es muy importante que mejoremos nuestra forma física en general, para tener un mejor aguante, 
-                resistencia de fondo y mayor potencia.</p>
-        </div>
-    </div>
-    <div class="contvol-3"> 
-        <div>
-            <img src="../assets/imagenes/voley3.png"  width="100%" height="100%" class="img3">
-            <h1 class="lesiones">Prevenir las lesiones:</h1>
-            <p>No podemos hacer mayor hincapié: antes de empezar a jugar, habitúate a calentar el cuerpo. Éste se va poniendo a tono y temperatura para realizar los ejercicios de desplazamientos, saltos y caídas…
-                Imagina el esfuerzo físico al que expones el cuerpo. Al finalizar debes estirar el cuerpo para relajar los músculos piernas y brazos.
-                Siempre, sin atajos. Porque como decíamos al principio: únicamente manteniendo hábitos constantes daremos con buenos resultados.</p>
-        </div>
-    </div>
-    <h1>Los 3 jugadores mas importantes del voley</h1>
-    <div class="row col-lg-10 contevol-4"> 
-        <div class="card" style="width: 18rem;">
-            <img src="../assets/imagenes/gibaBR.jpeg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <div class="maslogos col-lg-5">
+            <button type="button" class="btn btn-outline-light"><img src="../assets/iconos/registro.png" alt=""><p>Regístrate</p></button>
+            <button type="button" class="btn btn-outline-light"><img src="../assets/iconos/sesion.png" alt=""><p>Inicia Sesión</p></button>            
+            <a href="" data-bs-toggle="dropdown"><img class="menu" src="../assets/iconos/menu.png" alt=""></a>
+            <div class="dropdown-menu">
+                <a class="dropdown-item" href="">Inicio</a>
+                <a class="dropdown-item" href="">Nutricion</a>
+                <a class="dropdown-item" href="../paginas/Futbol.html">Futbol</a>
+                <a class="dropdown-item" href="">Tenis</a>
+                <a class="dropdown-item" href="">Basket</a>
+                <a class="dropdown-item" href="../paginas/Volley.html">Voley</a>
+                <a class="dropdown-item" href="">Natacion</a>
+                <a class="dropdown-item" href="">Hockey</a>
             </div>
         </div>
-        <br>
-        <div class="card" style="width: 18rem;">
-            <img src="../assets/imagenes/karchEEUU.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    </header>
+    <div class="padre1">
+        <h1>VOLEY</h1>
+        <p>El voleibol, o vóley, es un deporte de equipo donde dos grupos de seis jugadores se enfrentan en una cancha 
+        dividida por una roja. El objetivo es pasar el balón por encima de la red y hacerlo tocar el suelo del lado 
+        contrario, respetando un máximo de tres toques por equipo. Se juega al mejor de cinco sets, ganando cada uno
+        al llegar a 25 puntos con una diferencia mínima de 2. Es un deporte popular, con variantes como el voleibol
+        de playa y el sentado.</p>
+    </div>
+    <div class="padre2">
+        <h1>Como mejorar en el voley</h1>
+        <div class="contvol">
+            <div>
+                <img src="../assets/imagenes/voley1.png" width="100%" height="100%" class="img1">
+                    <h2 class="tecnicas"> Practicar las técnicas básicas:</h2>
+                    <p>Debemos aprender a colocar nuestro cuerpo, con los pies separados a la altura de los hombros, descargando el 
+                        peso en las piernas. Es importante aprender a arrastrar los pies de manera lateral.</p>
             </div>
         </div>
-        <br>
-        <div class="card" style="width: 18rem;">
-            <img src="../assets/imagenes/RegoBR2.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <div class="contvol-2"> 
+            <div>
+                <img src="../assets/imagenes/voley2.png"  width="100%" height="100%" class="img2">
+                <h1 class="forma">Ponernos en forma</h1>
+                <p>Es muy importante que mejoremos nuestra forma física en general, para tener un mejor aguante, 
+                    resistencia de fondo y mayor potencia.</p>
+            </div>
+        </div>
+        <div class="contvol-3"> 
+            <div>
+                <img src="../assets/imagenes/voley3.png"  width="100%" height="100%" class="img3">
+                <h1 class="lesiones">Prevenir las lesiones:</h1>
+                <p>No podemos hacer mayor hincapié: antes de empezar a jugar, habitúate a calentar el cuerpo. Éste se va poniendo a tono y temperatura para realizar los ejercicios de desplazamientos, saltos y caídas…
+                    Imagina el esfuerzo físico al que expones el cuerpo. Al finalizar debes estirar el cuerpo para relajar los músculos piernas y brazos.
+                    Siempre, sin atajos. Porque como decíamos al principio: únicamente manteniendo hábitos constantes daremos con buenos resultados.</p>
             </div>
         </div>
     </div>
+    <h1 class="jugadores">Los 3 jugadores mas importantes del voley</h1>
+    <div class="karchEEUU"> 
+            <img src="../assets/imagenes/karchEEUU.png" style="border-radius: 90%;"> 
+            <p>LAUSANA, Suiza, 5 de febrero de 2019 - Charles Frederick "Karch" Kiraly es una de las verdaderas leyendas del voleibol. Es el único jugador en la historia que ha ganado el oro olímpico en voleibol (1984 y 1988) y voleibol de playa (1996), cuando el deporte hizo su debut en los Juegos Olímpicos.</p> 
+    </div>
+    <div class="gibaBR"> 
+        <img src="../assets/imagenes/gibaBR.jpeg" style="border-radius: 90%;"> 
+        <p>Nacido el 23 de diciembre de 1976 en Londrina, el zurdo punta que mide 1,92 metro y pesa 85 kilos, sorteó varios momentos complicados en su vida. Nació en una favela, tuvo leucemia de chico, un accidente desembocó en más de cien puntos de sutura en un brazo y hasta afrontó una suspensión por consumo de marihuana.</p> 
+    </div>
+    <div class="regoBR"> 
+        <img src="../assets/imagenes/RegoBR2.png" style="border-radius: 90%;"> 
+        <p>Emanuel Fernando Scheffler Rego (Curitiba, Brasil, 15 de abril de 1973) es un jugador de voleibol de playa brasileño. Tiene 3 medallas olímpicas: oro en Atenas 2004, plata en Londres 2012 y bronce en Beijing 2008. También fue tres veces campeón del mundo (1999, 2003 y 2011). Se retiró como el único atleta de voleibol de playa que ha participado en cinco ediciones de los Juegos Olímpicos (1996 a 2012), junto a la australiana Natalie Cook</p> 
+    </div>
+    <h1 class="canchas">Mapa de algunas canchas de voley</h1>
     <div class="mapa">
-        <iframe src="https://www.google.com/maps/place/Cancha+de+Voley+La+Copita/@-34.5572323,-58.5130039,15z/data=!4m10!1m2!2m1!1scancha+de+voley!3m6!1s0x95bcb7482018425d:0xa3f8a7183b12afff!8m2!3d-34.5572315!4d-58.4939493!15sCg9jYW5jaGEgZGUgdm9sZXlaESIPY2FuY2hhIGRlIHZvbGV5kgEEcGFya5oBJENoZERTVWhOTUc5blMwVkpRMEZuU1VSNGIzUkRkVFZSUlJBQuABAA!16s%2Fg%2F11sfpmfpx0?entry=ttu&g_ep=EgoyMDI0MTExMy4xIKXMDSoASAFQAw%3D%3D"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d37706.700729251126!2d-58.52282834595!3d-34.577579778973316!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1scanchas%20de%20voley!5e0!3m2!1ses-419!2sar!4v1732062086454!5m2!1ses-419!2sar" width="600px" height="500px"></iframe>
     </div>
 </body>
 </html>
