--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <br>
 
-    <main class="contPrin-carrousel ">
+    <!--<main class="contPrin-carrousel ">
 
         <div class="contPrin-carrousel-slide">
 
@@ -92,9 +92,30 @@
         <div class="contPrin-carrousel-boton">
             <button class="contPrin-carrousel-boton-anterior"></button>
             <button class="contPrin-carrousel-boton-siguiente"></button>
-            <!--10:18-->
+            10:18
         </div>
 
+    </main>-->
+
+    <main class="col-lg-12">
+
+    </main>
+
+
+    <main class="row container-fluid cont" id="margen">
+
+        <div class="cont-info1 col-lg-8">
+            <h1>¿QUIENES SOMOS?</h1>
+            <br>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor cupiditate nihil aliquam vitae alias ducimus animi assumenda error culpa voluptate dicta placeat, consectetur fugit minus cumque dignissimos qui eveniet omnis!</p>
+        </div>
+
+        <div class="col-lg-4 cont-decoracion">
+            <img src="assets/iconos/logo1 index.png" class="imagen1" height="50px" width="50px">
+            <img src="assets/iconos/logo2 index.png" class="imagen2" height="50px" width="50px">
+            <img src="assets/iconos/logo3 index.png" class="imagen3" height="50px" width="50px">
+        </div>
+        
     </main>
 </body>
 </html>
