--- a/paginas/Tenis.html
+++ b/paginas/Tenis.html
@@ -7,8 +7,20 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="parrafoT">
-        <p>aaaaa</p>
+    <div class="container-fluid contenedorTe-imagen1-info1">
+        <div class="contenedorTe-info1">
+            <div class="contenedorTe-info1-h1">
+                <h1>TENIS</h1>
+            </div>
+            <div class="contenedorTe-info1-p1">
+                <p>Se disputa entre dos jugadores/as (individuales) o entre dos parejas (dobles) jugando con raquetas y pelotas y consiste en golpear la pelota después de un rebote o antes que rebote con la raqueta para que vaya de un lado al otro del campo pasando por encima de la red.</p>
+            </div>
+        </div>
+    </div>
+    <div class="contenedorTe-grande-mapa">
+        <div class="row container-fluid contenedorTe-mapa" id="margen">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d13143.466081486165!2d-58.502699802870545!3d-34.55693485038848!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1stenis!5e0!3m2!1ses-419!2sar!4v1732062085779!5m2!1ses-419!2sar"></iframe>
+        </div>
     </div>
 </body>
-</html>
+</html> 
