--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
             <button type="button" class="btn btn-outline-light"><img src="assets/iconos/sesion.png" alt=""><p>Inicia Sesión</p></button>            
             <a href="" data-bs-toggle="dropdown"><img class="menu" src="assets/iconos/menu.png" alt=""></a>
             <div class="dropdown-menu">
-                <a class="dropdown-item" href="">Inicio</a>
+                <a class="dropdown-item" href="#">Inicio</a>
                 <a class="dropdown-item" href="">Nutricion</a>
                 <a class="dropdown-item" href="paginas/Futbol.html">Futbol</a>
-                <a class="dropdown-item" href="">Tenis</a>
-                <a class="dropdown-item" href="">Basket</a>
-                <a class="dropdown-item" href="">Voley</a>
-                <a class="dropdown-item" href="">Natacion</a>
-                <a class="dropdown-item" href="">Hockey</a>
+                <a class="dropdown-item" href="paginas/Tenis.html">Tenis</a>
+                <a class="dropdown-item" href="paginas/Basquetball.html">Basket</a>
+                <a class="dropdown-item" href="paginas/Volley.html">Voley</a>
+                <a class="dropdown-item" href="paginas/Natacion.html">Natacion</a>
+                <a class="dropdown-item" href="paginas/Hockey.html">Hockey</a>
             </div>
         </div>
     </header>
